--- a/app/src/main/res/layout/item_donation_layout.xml
+++ b/app/src/main/res/layout/item_donation_layout.xml
@@ -20,8 +20,7 @@
                 android:id="@+id/image"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:src="@drawable/groceries" />
+                android:layout_centerInParent="true" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 </RelativeLayout>
